# firewall

./: .env  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BUILD_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCS_INDEX.md  Dockerfile  Dockerfile.hf  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  PREVIEW_FIX_SUMMARY.md  PRODUCTION_READINESS.md  PROJECT_DELIVERY.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  START_HERE.md  TESTING.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  package.json  pyproject.toml  vercel.json
.github/workflows/: deploy-hf.yml  deploy-vercel.yml
.orchids/: orchids.json
backend/: config.py  database.py  main.py  models.py
backend/routers/: ai_chat.py  analytics.py  auth.py  extension.py  federated_learning.py  health.py  incidents.py  rules.py  threats.py  traffic.py  ztna.py
backend/services/: ai_service.py  anomaly_detector.py  behavioral_analyzer.py  threat_analyzer.py  ws_manager.py
extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  setup.html  setup.js
extension/icons/: generate-icons.js
frontend/: .env  index.html  package.json  tailwind.config.js  vite.config.js
frontend/public/: landing.html
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  HexGridCanvas.jsx  Layout.jsx  NeuralFlowCanvas.jsx  ParticleCanvas.jsx  RealTimeThreatStream.jsx  Sidebar.jsx
frontend/src/hooks/: useThreatStream.js  useWebSocket.js
scripts/: dev-setup.bat  dev-setup.sh
(+15 files in other folders)
