[project]
name = "ai-ngfw"
version = "0.1.0"
description = "AI-Driven Next-Generation Firewall with Real-Time Threat Detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "aioredis==2.0.1",
    "websockets==12.0",
    "httpx==0.25.2",
    "groq==0.4.3",
    "huggingface-hub==0.20.1",
    "transformers==4.36.2",
    "numpy==1.26.3",
    "scikit-learn==1.3.2",
    "python-multipart==0.0.6",
    "cors-headers==1.0.1",
    "pyyaml==6.0.1",
    "bcrypt==4.1.1",
    "pyjwt==2.8.1",
    "aiosqlite==0.19.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
]
